--- a/templates-tail/bulk_verify.html
+++ b/templates-tail/bulk_verify.html
@@ -33,9 +33,9 @@
       <h1 class="text-3xl md:text-4xl font-bold mb-2">📊 Bulk Email Verification</h1>
       <p class="text-lg">Verify thousands of emails at once. Upload CSV/Excel files and get instant results with download.</p>
       <div class="flex justify-center mt-4 gap-2 flex-wrap">
-        <span class="bg-green-500 text-xs px-3 py-1 rounded-full">\u2713 Batch Processing</span>
-        <span class="bg-blue-500 text-xs px-3 py-1 rounded-full">\u2713 Excel Export</span>
-        <span class="bg-yellow-500 text-xs px-3 py-1 rounded-full">\u2713 Unlimited Files</span>
+        <span class="bg-green-500 text-xs px-3 py-1 rounded-full">✓ Batch Processing</span>
+        <span class="bg-blue-500 text-xs px-3 py-1 rounded-full">✓ Excel Export</span>
+        <span class="bg-yellow-500 text-xs px-3 py-1 rounded-full">✓ Unlimited Files</span>
       </div>
     </div>
   </section>
