text banner align

--- a/templates-tail/index.html
+++ b/templates-tail/index.html
@@ -71,10 +71,10 @@
   <div class="w-screen relative">
     <div class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white py-12 px-4 md:px-8 text-center">
       <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center">
-        <div class="flex-1 text-left md:pr-8 mb-6 md:mb-0">
+        <div class="flex-1 text-center md:pr-8 mb-6 md:mb-0">
           <h3 class="text-3xl md:text-5xl font-bold mb-2">🚀 Unlimited B2B Email Finder</h3>
           <p class="text-lg md:text-xl">Find verified business emails instantly. Connect with decision makers across any company.</p>
-          <div class="mt-4 flex flex-wrap gap-2">
+          <div class="mt-4 flex flex-wrap gap-2 justify-center">
             <span class="bg-green-500 text-xs md:text-sm px-2 py-1 rounded-full">✓ 100% Verified</span>
             <span class="bg-blue-500 text-xs md:text-sm px-2 py-1 rounded-full">✓ Real-time</span>
             <span class="bg-yellow-500 text-xs md:text-sm px-2 py-1 rounded-full">✓ Unlimited Searches</span>
