update nulk verify option

--- a/templates-tail/single_verify.html
+++ b/templates-tail/single_verify.html
@@ -66,7 +66,7 @@
             <span id="btn-spinner" class="ml-2 hidden h-4 w-4 border-2 border-t-transparent border-white rounded-full animate-spin"></span>
           </button>
         </form>
-        <button class="w-full mt-3 bg-gray-300 text-gray-700 py-2 px-4 rounded" disabled title="Coming soon!">Bulk Verify (Coming Soon)</button>
+        <a href="/bulk-verify" class="w-full mt-3 bg-gray-300 text-gray-700 py-2 px-4 rounded block text-center hover:bg-gray-400 transition">Bulk Verify</a>
       </div>
       <div id="result-container"></div>
     </div>
