--- a/templates-tail/single_verify.html
+++ b/templates-tail/single_verify.html
@@ -115,7 +115,7 @@
     }
 
     function showContent(user) {
-      userInfo.textContent = `${user.displayName} (${user.email})`;
+      userInfo.textContent = user.displayName;
       loginBtn.classList.add('hidden');
       logoutBtn.classList.remove('hidden');
       mainContent.classList.remove('hidden');
