--- a/templates-tail/index.html
+++ b/templates-tail/index.html
@@ -202,7 +202,7 @@
     }
 
     function showContent(user) {
-      userInfo.textContent = `${user.displayName} (${user.email})`;
+      userInfo.textContent = user.displayName;
       loginBtn.classList.add('hidden');
       logoutBtn.classList.remove('hidden');
       mainContent.classList.remove('hidden');
