--- a/templates-tail/bulk_verify.html
+++ b/templates-tail/bulk_verify.html
@@ -19,6 +19,7 @@
         <a href="/" class="hover:text-teal-600">Email Finder</a>
         <a href="/single-verify" class="hover:text-teal-600">Single Email Verify</a>
         <a href="/bulk-verify" class="text-teal-600 font-semibold">Bulk Email Verifier</a>
+        <a href="/dashboard" class="font-bold text-indigo-600 hover:text-indigo-700">Dashboard</a>
         <a href="mailto:peter@ijanta.com" class="hover:text-teal-600">Support</a>
         <span id="user-info"></span>
         <button id="login-btn" class="border border-teal-600 text-teal-600 rounded px-3 py-1 hover:bg-teal-50">Sign in with Google</button>
