--- a/templates-tail/dashboard.html
+++ b/templates-tail/dashboard.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-        <h2 class="text-xl font-bold mb-4">Bulk Verification Files</h2>
+        <h2 class="text-xl font-bold mb-4">Bulk Verification Files (Files with verified_filename are your ready files)</h2>
         <div id="bulk-files-table">
           <p class="text-gray-500">Loading...</p>
         </div>
