--- a/templates-tail/dashboard.html
+++ b/templates-tail/dashboard.html
@@ -44,7 +44,7 @@
       </div>
       <div class="bg-white p-6 rounded-lg shadow-md mb-6">
         <h2 class="text-xl font-bold mb-4">Bulk Verification Files (Files with verified_filename are your ready files)</h2>
-        <p class="text-xl font-bold mb-4">(PLEASE DO NOT DELETE THE FILE THAT IS UPLOADED BUT THE VERIFIED FILE HAS NOT YET APPEARED)</p>
+        <p class="text-xl font-bold mb-4">(VERIFIED FILES WILL APPEAR ONCE PROCESSED)</p>
         <div id="bulk-files-table">
           <p class="text-gray-500">Loading...</p>
         </div>
