update bulk-ui info

--- a/templates-tail/bulk_verify.html
+++ b/templates-tail/bulk_verify.html
@@ -62,7 +62,7 @@
     <div id="main-content" class="hidden">
       <div id="loading-spinner" class="hidden text-center my-6">
         <div class="w-12 h-12 border-4 border-teal-300 border-t-transparent rounded-full animate-spin mx-auto"></div>
-        <p class="mt-2 text-teal-700">Processing, please wait...</p>
+        <p class="mt-2 text-teal-700">Processing Started, Your File we be ready for download from dashboard...</p>
       </div>
       <div id="upload-success" class="hidden bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded mb-6"></div>
       <div class="bg-white p-6 rounded-lg shadow-md mb-6">
