--- a/templates-tail/single_verify.html
+++ b/templates-tail/single_verify.html
@@ -24,6 +24,7 @@
         <a href="/" class="hover:text-indigo-600">Email Finder</a>
         <a href="/single-verify" class="text-indigo-600 font-semibold">Single Email Verify</a>
         <a href="/bulk-verify" class="hover:text-indigo-600">Bulk Email Verifier</a>
+        <a href="/bulk-finder" class="hover:text-indigo-600">Bulk Email Finder</a>
 		<a href="/dashboard" class="font-bold text-indigo-600 hover:text-indigo-700">Dashboard</a>
         <a href="mailto:peter@ijanta.com" class="hover:text-indigo-600">Support</a>
         <span id="user-info"></span>
