--- a/templates-tail/index.html
+++ b/templates-tail/index.html
@@ -66,6 +66,7 @@
         <a href="/" class="hover:text-indigo-600">Email Finder</a>
         <a href="/single-verify" class="hover:text-indigo-600">Single Email Verify</a>
         <a href="/bulk-verify" class="hover:text-indigo-600">Bulk Email Verifier</a>
+        <a href="/bulk-finder" class="hover:text-indigo-600">Bulk Email Finder</a>
         <a href="/dashboard" class="font-bold text-indigo-600 hover:text-indigo-700">Dashboard</a>
         <a href="mailto:peter@ijanta.com" class="hover:text-indigo-600">Support</a>
         <span id="user-info" class="ml-3 text-gray-700"></span>
