--- a/templates-tail/single_verify.html
+++ b/templates-tail/single_verify.html
@@ -17,22 +17,53 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
   <!-- Navbar -->
-  <nav class="bg-white shadow">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="/" class="text-xl font-bold text-gray-800">Lead<span class="text-indigo-600">Finder</span></a>
-      <div class="flex gap-4 items-center">
-        <a href="/" class="hover:text-indigo-600">Email Finder</a>
-        <a href="/single-verify" class="text-indigo-600 font-semibold">Single Email Verify</a>
-        <a href="/bulk-verify" class="hover:text-indigo-600">Bulk Email Verifier</a>
-        <a href="/bulk-finder" class="hover:text-indigo-600">Bulk Email Finder</a>
-		<a href="/dashboard" class="font-bold text-indigo-600 hover:text-indigo-700">Dashboard</a>
-        <a href="mailto:peter@ijanta.com" class="hover:text-indigo-600">Support</a>
-        <span id="user-info"></span>
-        <button id="login-btn" class="border border-indigo-600 text-indigo-600 rounded px-3 py-1 hover:bg-indigo-50">Sign in with Google</button>
-        <button id="logout-btn" class="hidden border border-gray-400 text-gray-600 rounded px-3 py-1 hover:bg-gray-100">Sign Out</button>
+  <nav class="sticky top-0 z-30 bg-white/80 backdrop-blur shadow-md rounded-b-xl">
+    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
+      <a href="/" class="text-2xl font-extrabold text-blue-700 tracking-tight flex items-center gap-1">
+        <span>Lead</span><span class="text-indigo-500">Finder</span>
+      </a>
+      <div class="hidden md:flex items-center gap-2 lg:gap-4 font-medium">
+        <a href="/" class="px-3 py-2 rounded transition hover:bg-blue-50 hover:text-blue-700 text-gray-700">Email Finder</a>
+        <a href="/single-verify" class="px-3 py-2 rounded transition hover:bg-blue-50 hover:text-blue-700 bg-blue-100 text-blue-700">Single Email Verify</a>
+        <a href="/bulk-verify" class="px-3 py-2 rounded transition hover:bg-blue-50 hover:text-blue-700 text-gray-700">Bulk Email Verifier</a>
+        <a href="/bulk-finder" class="px-3 py-2 rounded transition hover:bg-blue-50 hover:text-blue-700 text-gray-700">Bulk Email Finder</a>
+        <a href="/dashboard" class="px-3 py-2 rounded transition font-bold hover:bg-blue-50 hover:text-blue-700 text-indigo-600">Dashboard</a>
+        <a href="mailto:peter@ijanta.com" class="px-3 py-2 rounded transition hover:bg-blue-50 hover:text-blue-700">Support</a>
+        <span id="user-info" class="ml-2 text-gray-700 flex items-center gap-1"></span>
+        <button id="login-btn" class="border border-blue-600 text-blue-600 rounded px-3 py-1 hover:bg-blue-50">Sign in</button>
+        <button id="logout-btn" class="border border-gray-400 text-gray-600 rounded px-3 py-1 hover:bg-gray-100 hidden">Sign Out</button>
       </div>
+      <!-- Hamburger -->
+      <button id="nav-toggle" class="md:hidden flex items-center px-2 py-1 border rounded text-blue-600 border-blue-600 hover:bg-blue-50 focus:outline-none">
+        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+      </button>
+    </div>
+    <!-- Mobile Menu -->
+    <div id="nav-menu" class="md:hidden hidden px-4 pb-4">
+      <a href="/" class="block px-3 py-2 rounded hover:bg-blue-50 hover:text-blue-700">Email Finder</a>
+      <a href="/single-verify" class="block px-3 py-2 rounded bg-blue-100 text-blue-700 font-bold">Single Email Verify</a>
+      <a href="/bulk-verify" class="block px-3 py-2 rounded hover:bg-blue-50 hover:text-blue-700">Bulk Email Verifier</a>
+      <a href="/bulk-finder" class="block px-3 py-2 rounded hover:bg-blue-50 hover:text-blue-700">Bulk Email Finder</a>
+      <a href="/dashboard" class="block px-3 py-2 rounded font-bold hover:bg-blue-50 hover:text-blue-700">Dashboard</a>
+      <a href="mailto:peter@ijanta.com" class="block px-3 py-2 rounded hover:bg-blue-50 hover:text-blue-700">Support</a>
+      <button id="mobile-login-btn" class="w-full mt-2 border border-blue-600 text-blue-600 rounded px-3 py-1 hover:bg-blue-50">Sign in</button>
+      <button id="mobile-logout-btn" class="w-full mt-2 border border-gray-400 text-gray-600 rounded px-3 py-1 hover:bg-gray-100 hidden">Sign Out</button>
     </div>
   </nav>
+  <script>
+    // Hamburger menu toggle
+    document.getElementById('nav-toggle').onclick = function() {
+      const menu = document.getElementById('nav-menu');
+      menu.classList.toggle('hidden');
+    };
+    // Sync login/logout buttons for mobile
+    document.getElementById('login-btn').onclick = function() {
+      document.getElementById('mobile-login-btn').click();
+    };
+    document.getElementById('logout-btn').onclick = function() {
+      document.getElementById('mobile-logout-btn').click();
+    };
+  </script>
 
   <!-- Banner -->
   <section class="bg-gradient-to-r from-red-400 to-orange-500 text-white py-10">
