--- a/templates-tail/index.html
+++ b/templates-tail/index.html
@@ -141,7 +141,7 @@
     <!-- Main Content -->
     <div id="main-content" class="hidden">
       <div class="bg-white rounded-lg shadow-md p-6 mb-6">
-        <h2 class="text-2xl font-bold mb-4">B2B Email Finder</h2>
+        <h2 class="text-2xl font-bold mb-4">Enter Details to get Email</h2>
         <form id="lead-form" method="POST">
           <div class="mb-4">
             <label class="block text-gray-700 mb-1">Full Name</label>
